--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "servidor": "nodemon index"
   },
+  "license": "MIT",
   "dependencies": {
     "apexcharts": "^3.37.1",
     "bcrypt": "^5.1.0",
