--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "servidor": "nodemon index"
+    "servidor": "node index"
   },
   "license": "MIT",
   "dependencies": {
